# Optris_Shutter_Trigger_Direct_SDK

./: .gitignore  CMakeLists.txt  README.md
sdk/: IRCalibrationManager.h  direct_binding.h  version.h
sdk/Win32/: libirextras.exp  libirextras.lib  libirextrasd.exp  libirextrasd.lib  libirimager.exp  libirimager.lib  libirimagerd.exp  libirimagerd.lib
sdk/x64/: libirextras.exp  libirextras.lib  libirextrasd.exp  libirextrasd.lib  libirimager.exp  libirimager.lib  libirimagerd.exp  libirimagerd.lib
tools/: .gitignore  Readme.md  csv_to_png.py  requirements.txt  shutter_trigger_run.py
tools/test/: example.csv  thermal.csv
user/src/: serializeRawLinux.cpp
xi410_tcp_daemon/: CMakeLists.txt
xi410_tcp_daemon/config/: Formats.def  generic.xml  run.bat
xi410_tcp_daemon/user/src/: irDirectDaemon.cpp
xi410_tcp_trigger/: CMakeLists.txt
xi410_tcp_trigger/user/inc/: snapshot_export.h
xi410_tcp_trigger/user/src/: tcp_trigger.cpp
xi410_usb_trigger/: CMakeLists.txt  README.md
xi410_usb_trigger/config/: generic.xml
xi410_usb_trigger/user/src/: snapshot_export.cpp  usb_trigger.cpp
